<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="android.slc.user.vm.MyInfoVm" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/developersContentView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_bg"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                android:src="@mipmap/user_bg_my_framgnt"
                app:layout_constraintDimensionRatio="h,20:9"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:singleLine="true"
                    android:text="@string/user_label_mine"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-48dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_bg">

                <FrameLayout
                    android:layout_width="56dp"
                    android:layout_height="56dp">

                    <ImageView
                        android:id="@+id/iv_icon"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/tv_icon"
                        style="@style/tvIconTextView" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_not_completed"
                    android:singleLine="true"
                    android:text="@{vm.userOf.userName}"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:paddingStart="@dimen/app_style_dp_16"
                    android:paddingEnd="@dimen/app_style_dp_16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_label_department"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="16sp" />

                    <Space style="@style/ZWWLayout" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/app_style_dp_16"
                        android:singleLine="true"
                        android:text="@{vm.userOf.deptSimpleName}"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/app_style_dp_32"
                    android:paddingStart="@dimen/app_style_dp_16"
                    android:paddingEnd="@dimen/app_style_dp_16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_label_mobile_phone_number"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="16sp" />

                    <Space style="@style/ZWWLayout" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/app_style_dp_16"
                        android:singleLine="true"
                        android:text="@{vm.userOf.phoneNo}"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--<include layout="@layout/app_bar_layout_dark" />-->
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>